pod-security-cel/restricted/disallow-privilege-escalation/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privilege-escalation
policies:
- ../disallow-privilege-escalation.yaml
resources:
- ../../../../pod-security/restricted/disallow-privilege-escalation/.kyverno-test/resource.yaml
results:
- kind: CronJob
  policy: disallow-privilege-escalation
  resources:
  - badcronjob01
  - badcronjob02
  - badcronjob03
  - badcronjob04
  - badcronjob05
  - badcronjob06
  result: fail
  rule: privilege-escalation
- kind: Deployment
  policy: disallow-privilege-escalation
  resources:
  - baddeployment01
  - baddeployment02
  - baddeployment03
  - baddeployment04
  - baddeployment05
  - baddeployment06
  result: fail
  rule: privilege-escalation
- kind: Pod
  policy: disallow-privilege-escalation
  resources:
  - badpod01
  - badpod02
  - badpod03
  - badpod04
  - badpod05
  - badpod06
  result: fail
  rule: privilege-escalation
- kind: CronJob
  policy: disallow-privilege-escalation
  resources:
  - goodcronjob01
  - goodcronjob02
  - goodcronjob03
  - goodcronjob04
  - goodcronjob05
  result: pass
  rule: privilege-escalation
- kind: Deployment
  policy: disallow-privilege-escalation
  resources:
  - gooddeployment01
  - gooddeployment02
  - gooddeployment03
  - gooddeployment04
  - gooddeployment05
  result: pass
  rule: privilege-escalation
- kind: Pod
  policy: disallow-privilege-escalation
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  - goodpod04
  - goodpod05
  result: pass
  rule: privilege-escalation
